[gd_scene load_steps=3 format=3 uid="uid://1s01ct2ivbvw"]

[ext_resource type="Script" path="res://Utility/MouseDetectionLayer.gd" id="1"]

[sub_resource type="PlaneMesh" id="1"]

[node name="MouseDetectionLayer" type="Node3D"]
script = ExtResource("1")

[node name="MeshInstance" type="MeshInstance3D" parent="."]
mesh = SubResource("1")

[node name="Origin" type="Node3D" parent="."]

[node name="zDirection" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="xDirection" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
